--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "bem-naming": "0.5.0",
-    "enb-bem-pseudo-levels": "0.2.6",
+    "enb-bem-pseudo-levels": "git://github.com/incrop/enb-bem-pseudo-levels.git#fix-old-deps",
     "vow": "0.4.7"
   },
   "devDependencies": {
